web/css/paypro.css
/* Contact Us */
.contact_us {
	background: #8a2785;
	position: relative
}
.contact_us .col {
	/* background: #8a2785; */
	display: block;
	float: none;
}
.contact_us .form-control {
	margin-bottom: 1.5em;
	/* padding: 1em; */
	height: 3.5em;
	border-radius: 10px;
}
.contact_us textarea.form-control {
	height: 150px;
	padding-top: .8em
}
.contact_us .btn {
	background: #530050;
	border: none;
	color: #fff;
	border-radius: 1.5em;
	padding: 10px;
	font-size: 1em;
	/* font-weight: bold */
}
.contact_us .customer_service {
	color: #fff;
	text-align: justify;
	margin-top: 3em;
	width: 225px;
}
.contact_us .customer_service .heading {
	font-size: 1.5em;
	font-weight: bold;
	border-bottom: 1px solid #fff;
	padding-bottom: .5em;
	margin-bottom: .5em;
}
.contact_us .customer_service .heading .no {
	letter-spacing: 4px;
}
.contact_us .customer_service .name {
	font-size: 1.1em;
}
.contact_us .customer_service .loc {
	font-size: .8em;
}
@media (max-width: 768px) {
	.contact_us .col-md-6 {
		padding: 0;
	}
}

/* Navbar */
.nav .language-btn img {
	width: 30px;
}
.nav .language-btn .dropdown {
	border-radius: 10px;
}
.nav .language-btn .dropdown-item {
	padding-bottom: 10px;
}
.nav .download-paypro > a {
	border: 1px solid #fff;
	color: #fff;
	border-radius: 1em;
	padding: 10px;
	margin-top: 1em;
	margin-bottom: 1em;
	text-transform: none;
}
.nav .download-paypro > a:hover {
	background: #fff !important;
	color: #f59d15 !important;
}
.nav .download-paypro .dropdown-menu {
	left: -5em;
	width: 150px;
}
.nav .download-paypro .dropdown-item {
	padding: .5em 1em;
}
.nav .download-paypro .dropdown-item a,
.nav .language-btn .dropdown-item a {
	color: #8a2785;
	background: #fff !important;
}
.nav .download-paypro .dropdown-item a:hover,
.nav .language-btn .dropdown-item a:hover {
	color: #f59d15 !important
}

.medsos a {
	background: #fff;
	color: #8a2785;
	height: 50px;
	width: 50px;
	text-align: center;
	display: inline-block;
	font-size: 1.5em;
	padding-top: 7px;
	border-radius: 50%;
}
.medsos a + a {
	margin-left: .5em;
}
/* .medsos a:hover {
	color: #f59d15;
} */

